# m5_forecasting

./: .gitignore  pyproject.toml
0_exploration/: Untitled.ipynb
3_code/: m5_main.py
4_output/: README.txt
code/: m5_main.py  model_evaluation.py
code/classes/: __init__.py  model.py  struct.py  ts_preprocessing.py
code/config/: README.txt  __init__.py  config.yaml  path_config.py  run_configs.py
config/: path_config.py
input/: README.txt
